# aiconfigurator

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: accuracy-regression-comment.yml  accuracy-regression-testing.yml  build-test.yml  comment-charts.yml  create-charts.yml  op-kernel-source-manifest-daily-run.yml  support-matrix-daily-run.yml  support-matrix-main.yml  support-matrix-release.yml
collector/: .gitignore  README.md  collect.py  collect_all_reduce.py  collect_comm.sh  collect_nccl.py  collect_nccl_sweep.sh  common_test_cases.py  helper.py  registry_types.py
collector/deep_collector/: README.md  test_internode.py
collector/sglang/: README.md  collect_attn.py  collect_dsv4_flash_attn.py  collect_gemm.py  collect_mhc_module.py  collect_mla.py  collect_mla_bmm.py  collect_mla_module.py  collect_moe.py  collect_wideep_deepep_moe.py  deepseekv4_sparse_modules.py  registry.py
collector/trtllm/: collect_attn.py  collect_gemm.py  collect_mamba2.py  collect_mla_module.py  collect_moe_v3.py  collect_wideep_moe_compute.py
docker/: Dockerfile
docs/: advanced_tuning.md  cli_user_guide.md  dynamo_deployment_guide.md
my_systems/: vr200.yaml
rust/aiconfigurator-core/: Cargo.toml  README.md
rust/aiconfigurator-core/src/: ffi.rs  lib.rs  model.rs  perf.rs
rust/aiconfigurator-core/tests/: engine_step.rs
tests/: README.md  conftest.py
tools/: dsv4flash_single_system_mode_automation.py  dsv4flash_topology_automation.py  extract_final_metrics.py  plot_pareto_compare.py  run_dsv4flash_topology_compare.sh
(+391 files in other folders)
