# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "aiconfigurator-core"
version = "0.1.0"
edition = "2021"
description = "Rust-native core latency estimator for AIConfigurator"
license = "Apache-2.0"

[lib]
name = "aiconfigurator_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.23"
